--- a/styles/scss/global/_variable.scss
+++ b/styles/scss/global/_variable.scss
@@ -1,11 +1,14 @@
 /* global variable */
-$brand-color: #02897A;
+$brand-color: #02897A; 
+$white-color: #ffffff;
 
 $global-white-font: #FFFFFF;
 $global-main-font: #22343D;
 
+$global-second-font: #737373;
+
 /* component variable */
-$sign-up-border: #BCD0E5;
+$sign-in-border: #BCD0E5;
 
 /* section variable */
 // header
@@ -13,11 +16,35 @@ $header-main-font: #22343D;
 $header-second-font: #173A56;
 
 // feature
-$card-shadow: rgba(0, 0, 0, 0.25);
-$card-nth-1: #02897A;
-$card-nth-2: #4D8DFF;
-$card-nth-3: #740A76;
-$card-nth-4: #F03E3D;
+$feature-card-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+$feature-card-nth-1: #02897A;
+$feature-card-nth-2: #4D8DFF;
+$feature-card-nth-3: #740A76;
+$feature-card-nth-4: #F03E3D;
 
+// support 
+$support-marker-nth-1: #FF9900;
+$support-marker-nth-2: #F03E3D;
+$support-marker-nth-3: #4D8DFF;
+
+// strategies
+$strategies-card-border: #DEDEDE;
+
+// price
+$price-card-shadow: 0px 2px 8px rgba(0, 0, 0, 0.25);
+$price-amound-period: #AFAFAF;
+
+// reviews
+$review-card-border: #DEDEDE;
+$review-star: #F3CD03;
+
+// footer
+$footer-main-font: #22343D;
+$footer-second-font: #173A56;
+
+$social-item-back: #EDFFFC;
+
+$input-border: #BCD0E5;
+$input-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
 
 /* gradient */
